<resources>
    <string name="app_name">PaterAI</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_market">MarketActivity</string>
    <string name="title_home">Home</string>
    <string name="title_product">Product</string>
    <string name="title_order">Pesanan</string>
    <string name="title_profile">Profil</string>
    <string name="img_des_sign_in_decoration">Sign In Decoration</string>
    <string name="img_des_logo_paterai">Logo PaterAI</string>
    <string name="title_sign_in">Welcome To PaterAI</string>
    <string name="sign_in">Sign In</string>
    <string name="btn_sign_in_google">Continue with Google</string>
    <string name="btn_sign_in_fb">Continue with Facebook</string>
    <string name="content_description_help">help</string>
    <string name="content_description_flash">flash</string>
    <string name="start_capture">start capture</string>
    <string name="title_cart">Cart</string>
    <string name="near_you">Near You</string>
    <string name="content_description_img_vegetable">img vegetable</string>
    <string name="checkout">Checkout</string>
    <string name="content_description_retry">retry</string>
    <string name="retry">Retry</string>
    <string name="ok">OK</string>
    <string name="vegetable_not_detected">Sayur tidak terdeteksi</string>
</resources>