<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_bottom_home"
        android:title="@string/title_home"
      />

    <item
        android:id="@+id/navigation_product"
        android:icon="@drawable/ic_bottom_product"
        android:title="@string/title_product"
        />

    <item
        android:id="@+id/placeholder"
        android:title=""
        android:enabled="false"
        />

    <item
        android:id="@+id/navigation_order"
        android:icon="@drawable/ic_bottom_order"
        android:title="@string/title_order"
      />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_bottom_profile"
        android:title="@string/title_profile"
       />

</menu>