<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/market_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.sayursehat.paterai.ui.market.home.HomeMarketFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home_market" />

    <fragment
        android:id="@+id/navigation_product"
        android:name="com.sayursehat.paterai.ui.market.product.ProductMarketFragment"
        android:label="@string/title_product"
        tools:layout="@layout/fragment_product_market" />

    <fragment
        android:id="@+id/navigation_order"
        android:name="com.sayursehat.paterai.ui.market.order.OrderMarketFragment"
        android:label="@string/title_order"
        tools:layout="@layout/fragment_order_market" />
    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.sayursehat.paterai.ui.market.profile.ProfileMarketFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile_market" />
</navigation>